added "workflow_dispatch" to continuous_integration.yml

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -2,6 +2,7 @@ name: continuous-integration
 
 # syntax https://help.github.com/en/articles/workflow-syntax-for-github-actions
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - '*'
